# Machine-Learning-for-Intelligent-Agents-with-Limited-Resources

./: .gitignore  EXECUTION_PLAN.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-06-09-week5-d1.md
experiments/: common.py  phase1_exploratory.py  phase1_extended.py  phase2_core.py  phase3_stretch.py  reproduce_all.py
reports/: week4_report.tex
scripts/: boost_n11_k5.py  reproduce.sh  rerun_phase1_with_k5.py  smoke_test_dual_eval.py  smoke_test_restarts.py
src/: __init__.py
src/analysis/: __init__.py  anneal_trace_plot.py  class_gap_bars.py  class_gaps.py  diagnostics.py  error_curves.py  fitting.py  heatmap.py  monitor_bar_charts.py  posterior_scatter.py  restart_distribution.py  tridiagonality.py
src/baselines/: __init__.py  mk_random_walk.py
src/core/: __init__.py  boundary_checks.py  loss.py  recursion.py
src/monitors/: __init__.py  base.py  dynamic.py  m1_unconstrained.py  m2_soft_accept.py  m3_counting.py  m4_minimal.py
src/optim/: __init__.py  anneal.py  exhaustive.py  genetic.py  gradient.py
tests/: test_boundaries.py  test_experiment_entrypoints.py  test_monitor_renaming.py  test_nesting.py  test_phase_outputs.py  test_recursion.py  test_report_eval.py  test_reproduce_pipeline.py
